<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/item_fragment_style"
    >

    <TextView
        android:id="@+id/nowWeather_text"
        android:layout_width="@dimen/big_textView"
        android:layout_height="@dimen/big_textView"
        android:text="@string/default_weather"
        android:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <ImageView
        android:id="@+id/nowWeather_img"
        android:layout_width="@dimen/big_image"
        android:layout_height="@dimen/big_image"
        app:layout_constraintBottom_toBottomOf="@+id/nowWeather_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.648"
        app:layout_constraintStart_toEndOf="@+id/nowWeather_text"
        app:layout_constraintTop_toTopOf="@+id/nowWeather_text"
        app:layout_constraintVertical_bias="0.648"
        app:srcCompat="@drawable/qing"
        android:contentDescription="@string/today_weather_photo" />

    <TextView
        android:id="@+id/nowWeather_tem"
        android:layout_width="@dimen/big_textView"
        android:layout_height="@dimen/mid_textView_high"
        android:autoSizeTextType="uniform"
        android:text="@string/default_tem"
        app:layout_constraintEnd_toEndOf="@+id/nowWeather_text"
        app:layout_constraintStart_toStartOf="@+id/nowWeather_text"
        app:layout_constraintTop_toBottomOf="@+id/nowWeather_text" />

    <TextView
        android:id="@+id/nowWeather_more"
        android:layout_width="@dimen/big_textView"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:text="@string/more_info"
        app:layout_constraintEnd_toEndOf="@+id/nowWeather_text"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/nowWeather_text"
        app:layout_constraintTop_toBottomOf="@+id/nowWeather_tem" />

    <TextView
        android:id="@+id/nowWeather_air"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/air_quality"
        app:layout_constraintEnd_toEndOf="@+id/nowWeather_img"
        app:layout_constraintTop_toBottomOf="@+id/nowWeather_img" />
</androidx.constraintlayout.widget.ConstraintLayout>